tests/e2e/validation-webhook/http/match-conditions/valid/policy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/playground/refs/heads/main/schemas/json/v3/validatingpolicy-policies.kyverno.io-v1alpha1.json
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: valid
spec:
  evaluation:
    mode: HTTP
  matchConditions:
  - name: match-host
    expression: |
      object.attributes.path.startsWith("/get")
  validations:
  - expression: >
      http.Denied("not authorised").Response()
